# homeassistant

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  efesdfgvre.py  entrypoint.sh  manage.py  matrix.py  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-developer.md  code-reviewer.md  frontend-developer.md
.claude/skills/: commit.md  docs.md  jira.md  test.md
.claude/skills/ai-agent/: SKILL.md
.claude/skills/archie-shared/: SKILL.md
.claude/skills/backend-developer/: SKILL.md
.claude/skills/frontend-developer/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: auto-tag-archie-shared.yml  ci.yml
agent_docs/: code_style.md  logging.md
archie-shared/: README.md  pyproject.toml
archie-shared/archie_shared/: __init__.py
archie-shared/archie_shared/chat/: __init__.py  models.py  utils.py
archie-shared/archie_shared/ui/: __init__.py  models.py
archie-shared/archie_shared/user/: models.py
archie-voice/: hey-archie_en_linux_v3_0_0.ppn  main.py  voice.py
homeassistant/: asgi.py  redis_client.py  settings.py  urls.py  wsgi.py
homeassistant/ai_assistant/: admin.py  apps.py  django_models.py  image_processor.py  models.py  pydantic_models.py  urls.py  utils.py  views.py
homeassistant/ai_assistant/migrations/: 0001_initial.py  0002_remove_message_conversation_delete_conversation_and_more.py  0003_initial.py  0004_alter_conversation_conversation_id.py  0005_remove_message_metadata_json_remove_message_text_and_more.py  (+3 more)
homeassistant/api/: apps.py  models.py  urls.py  views.py
homeassistant/camera/: apps.py  urls.py  views.py
homeassistant/climate/: apps.py  pydantic_models.py  services.py
homeassistant/light/: README.md  admin.py  api_views.py  apps.py  exceptions.py  light_controller.py  models.py  pydantic_models.py  services.py  simple_scanner.py  test_lamps.py  tests.py  urls.py  views.py
homeassistant/spotify/: api_views.py  apps.py  exceptions.py  services.py  urls.py  views.py
homeassistant/voice_assistant/: apps.py  models.py  services.py  urls.py  views.py
homeassistant/weather/: README.md  admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
homeassistant/webapp/: admin.py  apps.py  models.py  urls.py  views.py  views_dashboard.py
scripts/: jira_tool.py
staticfiles/ai_assistant/: chat-assistant.tsx
(+88 files in other folders)
