[tool.poetry]
name = "homeassistant"
version = "0.1.0"
description = ""
authors = ["NikGor <nicolas.gordienko@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.1"
pydantic = "^2.11.4"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"
openai = "^1.79.0"
python-dotenv = "^1.1.0"
openai-agents = "^0.0.15"
dj-database-url = "^2.3.0"
opencv-python = "^4.11.0.86"
yeelight = "^0.7.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
