[tool.poetry]
name = "homeassistant"
version = "0.1.0"
description = ""
authors = ["NikGor <nicolas.gordienko@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.2.1"
pydantic = "^2.11.4"
fastapi = "^0.115.12"
archie-shared = {path = "archie-shared", develop = true}
jinja2 = "^3.1.6"
openai = "^1.79.0"
python-dotenv = "^1.1.0"
openai-agents = "^0.0.15"
dj-database-url = "^2.3.0"
opencv-python = "^4.11.0.86"
yeelight = "^0.7.16"
opencv-python-headless = "^4.12.0.88"
psycopg2-binary = "^2.9.9"
numpy = "^2.0.0"
redis = "^5.0.1"
google-genai = "^1.50.1"
pillow = "^11.0.0"

[tool.poetry.group.voice]
optional = true

[tool.poetry.group.voice.dependencies]
pvporcupine = "^3.0.2"
pyaudio = "^0.2.14"
sounddevice = "^0.4.7"
simpleaudio = "^1.0.4"



[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
