[tool.poetry]
name = "archie-shared"
version = "0.1.07"
description = "Shared Pydantic models and utilities for Archie ecosystem"
authors = ["NikGor <nicolas.gordienko@example.com>"]
readme = "README.md"
packages = [{include = "archie_shared"}]

[tool.poetry.dependencies]
python = ">=3.11.0rc1,<4.0"
pydantic = "^2.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
